apps/ebooks/calibre-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web
  namespace: ebooks
  labels:
    app.kubernetes.io/name: calibre-web
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "calibre-web"
    kube-vip.io/loadbalancerIPs: "${LAN_PREFIX}.30"
spec:
  type: LoadBalancer
  ports:
    - port: 8083
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: calibre-web
